added support for anthropic agent (draft) + minor updates to Payflow Balance